--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
-		"@deck.gl/core": "^9.1.6",
-		"@deck.gl/geo-layers": "^9.1.6",
-		"@deck.gl/layers": "^9.1.6",
-		"@deck.gl/react": "^9.1.6",
+		"@deck.gl/core": "^9.1.5",
+		"@deck.gl/layers": "^9.1.5",
+		"@deck.gl/mesh-layers": "^9.1.5",
+		"@deck.gl/react": "^9.1.5",
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
 		"@hookform/resolvers": "^3.9.0",
+		"@loaders.gl/gltf": "^4.3.3",
 		"@mapbox/mapbox-gl-draw": "^1.5.0",
 		"@mapbox/mapbox-gl-geocoder": "^5.0.3",
 		"@mapbox/search-js-react": "^1.0.0",
@@ -47,8 +48,9 @@
 		"@mui/lab": "^6.0.0-beta.22",
 		"@mui/material": "^6.4.8",
 		"@mynaui/icons-react": "^0.3.3",
-		"@react-three/drei": "^10.0.4",
-		"@react-three/fiber": "^9.1.0",
+		"@react-three/drei": "^9.99.0",
+		"@react-three/fiber": "^8.15.16",
+		"@react-three/postprocessing": "^2.15.13",
 		"@turf/area": "^7.2.0",
 		"@turf/helpers": "^7.2.0",
 		"@turf/transform-scale": "^7.2.0",
@@ -60,22 +62,22 @@
 		"dayjs": "^1.11.13",
 		"deck.gl": "^9.1.6",
 		"mapbox-gl": "^3.10.0",
-		"react": "^18.3.1",
+		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^5.0.0",
 		"react-hook-form": "^7.53.0",
-		"react-map-gl": "^7.1.9",
+		"react-map-gl": "^8.0.1",
 		"react-router-dom": "^6.22.0",
 		"sass-embedded": "^1.83.4",
-		"styled-components": "^6.1.16",
+		"styled-components": "^6.1.17",
 		"tailwind-variants": "^0.3.1",
-		"three": "^0.174.0",
+		"three": "^0.161.0",
 		"threedgizmo": "^0.8.0",
 		"threejs-navigator-gizmo": "^0.0.6",
 		"zod": "^3.23.8",
 		"zustand": "^4.5.5"
-	},
-	"devDependencies": {
+	  },
+	  "devDependencies": {
 		"@commitlint/cli": "^19.6.0",
 		"@commitlint/config-conventional": "^19.6.0",
 		"@commitlint/cz-commitlint": "^19.5.0",
@@ -100,10 +102,10 @@
 		"@types/eslint__js": "^8.42.3",
 		"@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
 		"@types/node": "^22.5.1",
-		"@types/react": "^19.0.0",
-		"@types/react-dom": "^19.0.0",
+		"@types/react": "^18.3.5",
+		"@types/react-dom": "^18.3.0",
 		"@types/react-map-gl": "^6.1.7",
-		"@types/three": "^0.174.0",
+		"@types/three": "^0.161.2",
 		"@typescript-eslint/eslint-plugin": "^8.3.0",
 		"@typescript-eslint/parser": "^8.3.0",
 		"@vitejs/plugin-react-swc": "^3.7.0",
@@ -141,7 +143,7 @@
 		"vite": "^6.2.2",
 		"vite-plugin-static-copy": "^1.0.6",
 		"vitest": "^3.0.9"
-	},
+	  },
 	"config": {
 		"commitizen": {
 			"path": "@commitlint/cz-commitlint"
