--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"esModuleInterop": true,
 
 		/* Bundler mode */
-		"moduleResolution": "bundler",
+		"moduleResolution": "node",
 		"allowImportingTsExtensions": true,
 		"resolveJsonModule": true,
 		"isolatedModules": true,
@@ -24,10 +24,10 @@
 		"noImplicitReturns": true,
 		"noPropertyAccessFromIndexSignature": true,
 		"noUncheckedIndexedAccess": true,
-		
+
 		"baseUrl": "./",
 		"paths": {
-		  "@/*": ["src/*"]
+			"@/*": ["src/*"]
 		}
 	},
 	"include": ["src", "e2e"],
