--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"@types/mapbox-gl": "^3.4.1",
 		"@types/react-color": "^3.0.13",
 		"@types/styled-components": "^5.1.34",
+		"aos": "^2.3.4",
 		"chroma-js": "^3.1.2",
 		"dayjs": "^1.11.13",
 		"deck.gl": "^9.1.6",
@@ -100,6 +101,7 @@
 		"@testing-library/react": "^16.0.1",
 		"@testing-library/user-event": "^14.5.2",
 		"@total-typescript/ts-reset": "^0.6.0",
+		"@types/aos": "^3.0.7",
 		"@types/chroma-js": "^3.1.1",
 		"@types/eslint__js": "^8.42.3",
 		"@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
